cmake_minimum_required(VERSION 3.5)

project(search-server LANGUAGES CXX)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

FILE(GLOB_RECURSE CPP "*.cpp")
FILE(GLOB_RECURSE H "*.h")

add_executable(${PROJECT_NAME} ${CPP} ${H})
target_link_libraries(${PROJECT_NAME} tbb pthread)

install(TARGETS ${PROJECT_NAME} DESTINATION bin)
